2006-06-02  Xavier Maillard  <zedek@gnu.org>

	* Updated Debian package to 6.6.0-4

2006-05-28  Xavier Maillard  <zedek@gnu.org>

	* Version 6.6.0 is released
	
	* Tagged source with RELEASE_6-6-0 for "Back in the business" release
	
	* HAGKING, BUGS, README: New files.

	* color-theme.el (color-theme-libraries): Changed docstring.
	(define-color-theme): Reworked macro to properly define themes.
	(color-theme-initialize): Actually does what expected.
	(color-theme-theme): Removed this useless variable.

	Removed commentary section (splitted into specific files)

	* Makefile.defs (DEBNAME): Changed default value to reveal all
		  needed informations
		  (LASTUPLOAD): New version.
		  (CVSMODULE, CVSBRANCH, CVSROOT): New variables used to
			  prepare a release.

	* Makefile (dist, dist-prepare, debian, 
		    tarball, realease, upload, $TARBALL, $DEBNAME): New targets.
	(distclean): Delete old build traces (files, package, etc...)

	* debian/control: Changed Maintainer informations. 

	* debian/emacsen-startup: Safely load autoloads file or die if tests fail.

	* debian/rules: Fixed bad package construction.

	* debian/emacsen-install: Handle theme files installation correctfully. 

2006-05-27  Xavier Maillard  <zedek@gnu.org>

	* debian: New directory. Contains all stuff to build a neat and
		  cool color-theme-el Debian package.
	
	* AUTHORS: New file.

	* color-theme-autoloads.in: Ditto..

	* Makefile.defs: Ditto.

	* Makefile: Ditto.

	* color-theme.el (replace-in-string): New function. Used in define-color-theme
	(color-theme-directory): New variable.
	(color-theme-libraries): Changed default value to color-theme
		official theme directory
	(color-theme-load-all-themes): New variable.
	(color-theme-initialize): Load theme files defined either in
		color-theme-libraries or color-theme-directory.

2006-05-22  Xavier Maillard  <zedek@gnu.org>

	* color-theme-library.el: make bytecompiler happy.

	* color-theme.el (color-theme-initialize, color-theme-select)